# entservices-warehouse

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  NOTICE  PRODUCT.md  build_dependencies.sh  cov_build.sh  services.cmake
.github/: copilot-instructions.md
.github/instructions/: Plugin.instructions.md  PluginOnboardingCompliance.instructions.md  Plugincmake.instructions.md  Pluginconfig.instructions.md  Pluginimplementation.instructions.md  Pluginlifecycle.instructions.md
.github/workflows/: L1-tests.yml  L2-tests.yml  native_full_build.yml  tests-trigger.yml
Tests/L1Tests/: CMakeLists.txt
Tests/L2Tests/: CMakeLists.txt
Tests/L2Tests/tests/: Warehouse_L2Test.cpp
helpers/: PluginInterfaceBuilder.h  UtilsString.h  UtilsgetFileContent.h  tptimer.h
plugin/: CMakeLists.txt  Warehouse.conf.in  Warehouse.config  Warehouse.cpp  Warehouse.h  WarehouseImplementation.cpp  WarehouseImplementation.h
plugin/cmake/: FindDS.cmake  FindIARMBus.cmake
